--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -38,7 +38,7 @@
 <meta property="og:type" content="website" />
 
 <!-- Favicons -->
-<!-- <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="/img/favicon/apple-icon-76x76.png">
@@ -52,7 +52,7 @@
 <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
 <link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileImage" content="/img/favicon/ms-icon-144x144.png"> -->
+<meta name="msapplication-TileImage" content="/img/favicon/ms-icon-144x144.png">
 <meta name="msapplication-TileColor" content="#111827">
 <meta name="theme-color" content="#111827" />
 
