Plans has been added

--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="es" class="scroll-smooth">
 <head>
-    <title><%= title %> - Desarrollador Web</title>
-    <meta property="og:title" content="Joaquín Cancino - Desarrollador Web en Puerto Varas" />
+    <title><%= title %> - Diseñador Web en Puerto Varas y Ensenada</title>
+    <meta property="og:title" content="Joaquín Cancino - Diseñador Web en Puerto Varas y Ensenada" />
     <%- include('partials/head'); -%>
     
 </head>
 <body>
     <%- include("partials/navbar") %>
-
+    <button id="scrollTopBtn" onclick="scrollToTop()" class="size-10 hidden fixed bottom-5 right-5 text-gray-800 text-2xl p-3 rounded-full transition-opacity duration-300 z-20">
+        👆🏻
+      </button>
     <main>
         <section id="inicio" class="welcome-section bg-black">
-            <div class="welcome-background bg-[url('/img/volcan-osorno-bg.jpg')] bg-cover bg-center size-full top-0 left-0 absolute"></div>
+            <div class="welcome-background bg-[url('/img/volcan-osorno-bg.webp')] bg-cover bg-center size-full top-0 left-0 absolute"></div>
             <div class="welcome-content text-white text-center h-full flex flex-col items-center justify-center">
                 <div class="p-5">
-                    <p class="text-3xl mb-8 animate__animated animate__fadeInUp animate__delay-1s"><span class="waving-hand">👋</span> ¡Hola! Mi nombre es Joaquín Cancino 🧑🏻‍💻</p>
-                    <h1 class="text-5xl font-bold animate__animated animate__fadeInDown">Programador y Diseñador Web en Puerto Varas</h1>
+                    <p class="text-3xl mb-8 animate__animated animate__fadeInUp animate__delay-1s"><span class="waving-hand">👋</span> ¡Hola! Soy Joaquín Cancino 🧑🏻‍💻</p>
+                    <h1 class="text-5xl font-bold animate__animated animate__fadeInDown">Programador y Diseñador Web en Puerto Varas y Ensenada</h1>
                 </div>
                 <div class="cta">
                     <a class="fa fa-angle-down page-scroll p-3 mt-28 text-4xl" href="#sobre-mi"></a>
@@ -23,34 +25,32 @@
             </div>
         </section>
         <section id="sobre-mi" class="w-full py-20 md:py-24 lg:py-32 bg-white">
-            <div class="px-24 md:px-48 lg:px-72 flex justify-center items-center flex-col">
+            <div class="px-16 md:px-48 lg:px-72 flex justify-center items-center flex-col">
                 <div>
                     <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl text-center mb-8">Sobre mí</h2>
                     <img class="h-52 w-52" src="/img/mf-avatar.svg" alt="Foto de Joaquín">
                 </div>
                 <div class="mt-8">
-                    <p class="leading-normal text-xl text-center">Ayudo a emprendedores y empresas locales en Puerto Varas y Ensenada a mejorar su presencia online con sitios web modernos, optimizados y adaptados a sus necesidades. Con mi experiencia en desarrollo web, garantizo que tu página destaque tanto en diseño como en funcionalidad.</p>
+                    <p class="leading-normal text-xl text-center">Mi nombre es Joaquín Cancino y ayudo a emprendedores y empresas locales en Puerto Varas y Ensenada a mejorar su presencia online con sitios web modernos, optimizados y adaptados a sus necesidades. Con mis habilidades en desarrollo web, garantizo que tu página destaque tanto en diseño como en funcionalidad.</p>
                 </div>
             </div>
         </section>
-        <section id="portafolio" class="w-full py-12 md:py-24 lg:py-32 bg-gray-700">
+        <section id="portafolio" class="w-full py-12 md:py-24 lg:py-32 bg-gray-600">
             <div class="container px-4 md:px-6 mx-auto">
                 <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl text-center mb-8 text-white">Mi Portafolio</h2>
                 <div class="grid gap-6 lg:grid-cols-3">
                     <% portfolio.forEach(function(item) { %>
                         <div class="rounded-lg border border-gray-700 bg-gray-800 text-gray-100 shadow-sm">
                             <div class="p-4">
-                                <a href="https://viveroensenada.cl" target="_blank">
+                                <a href="<%= item.url %>" target="_blank">
                                     <img
-                                    alt="Proyecto <%= item.name %>"
-                                    class="object-cover w-full h-60 rounded-lg"
-                                    height="240"
+                                    loading="lazy"
+                                    alt="Diseño web realizado por Joaquín Cancino para <%= item.name %>"
+                                    class="w-auto h-auto object-cover rounded-lg"
                                     src="<%= item.img %>"
-                                    style="aspect-ratio: 360/240; object-fit: cover;"
-                                    width="360"
                                     />
                                 </a>
-                                <h3 class="mt-4 text-xl font-bold">Proyecto <%= item.name %></h3>
+                                <h3 class="mt-4 text-xl font-bold"><%= item.name %></h3>
                                 <p class="mt-2 text-gray-400"><%= item.description %></p>
                                 <a href="<%= item.url %>" class="mt-4 inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none border border-gray-700 text-white hover:bg-gray-700 h-10 py-2 px-4">
                                     Ver Detalles
@@ -59,18 +59,113 @@
                             </div>
                         </div>
                     <% }); %>
+                    <div class="rounded-lg border border-gray-700 bg-gray-800 text-gray-100 shadow-sm">
+                        <div class="p-4">
+                            <a href="#planes">
+                                <img
+                                alt="Diseño web realizado por Joaquín Cancino en Puerto Varas o Ensenada"
+                                class="w-auto h-auto object-cover rounded-lg"
+                                src="/img/portfolio/new-web-screenshoot.webp"
+                                />
+                            </a>
+                            <h3 class="mt-4 text-xl font-bold">Un Proyecto Increible juntos</h3>
+                            <p class="mt-2 text-gray-400">¿Tienes en mente un proyecto? Hagamos algo increible juntos y llevemos tu negocio al siguiente nivel. 🚀</p>
+                            <a href="#planes" class="mt-4 inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none border border-gray-700 text-white hover:bg-gray-700 h-10 py-2 px-4">
+                                Ver Detalles
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-2 h-4 w-4"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+        <section id="planes" class="w-full py-12 md:py-24 lg:py-32 bg-gray-700">
+            <div class="container px-4 mx-auto">
+              <div class="flex flex-col mb-14 text-center">
+                <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl text-white">
+                  Planes de Diseño Web
+                </h2>
+                <h3 class="text-yellow-500 font-bold mt-3">
+                  <a href="/#plan-economico">
+                    ¡Ofertas especiales para primeros clientes!
+                  </a>
+                </h3>
+              </div>
+                <div class="grid gap-8 sm:gap-10 md:gap-12 lg:gap-16 lg:grid-cols-3 md:grid-cols-1 sm:grid-cols-1">
+                    <% packages.forEach(pkg => { %>
+                        <div id="plan-<%= pkg.name.toLowerCase().normalize('NFD').replace(/[\u0300-\u036f]/g, '') %>" class="relative w-full">
+                          <% if (pkg.best) { %>
+                            <img src="/img/anual-best-discount.svg" alt="Mejor Oferta" loading="lazy" width="79" height="80" class="absolute -top-4 -right-4 z-10">
+                          <% } %>
+                          <div class="p-6 text-center items-center shadow-xl rounded-2xl flex flex-col bg-[#212e36] place-content-stretch border-t-4 border-[<%= pkg.color %>] text-white w-full">
+                            <h2 class="text-lg lg:text-2xl font-inter text-neutral-title font-bold leading-headline">
+                              <%= pkg.name %>
+                            </h2>
+                            <% if (pkg.example) { %>
+                              <span class="mt-2 text-[<%= pkg.color %>] font-semibold">
+                                <a href="<%= pkg.example %>">Ver página de ejemplo</a>
+                              </span>
+                            <% } %>
+                            <div class="flex flex-row flex-nowrap items-center mt-6 mb-4">
+                              <p class="text-gray-400">
+                                <%= pkg.description %>
+                              </p>
+                            </div>
+                            <span>
+                              <% if (pkg.beforePrice) { %>
+                                <del class="delete relative decoration-none opacity-60 !text-[<%= pkg.color %>] before:!bg-[<%= pkg.color %>] leading-none">
+                                  <%= pkg.beforePrice %> CLP
+                                </del>
+                              <% } %>
+                              <span class="flex justify-center mb-5 text-[<%= pkg.color %>] font-inter font-bold text-2xl sm:text-3xl">
+                                <%= pkg.price %> CLP
+                              </span>
+                            </span>
+                            <div class="text-center p-4 sm:p-10">
+                              <a target="_blank" class="rounded-md bg-[<%= pkg.color %>] inline-flex items-center justify-center text-sm font-medium w-auto h-11 px-12 sm:px-24 hover:bg-opacity-70 transition-colors duration-300" href="<%= pkg.wspLink %>">
+                                Consultar
+                              </a>
+                            </div>
+                            <ul class="flex flex-col">
+                              <% pkg.features.map(ft => { %>
+                                <li class="flex content-start items-center text-white mt-3 text-start">
+                                  <i class="fas fa-check-circle content-center mr-2 text-[<%= pkg.color %>]"></i>
+                                  <%= ft %>
+                                </li>
+                              <% }) %>
+                            </ul>
+                            
+                            <!-- Mantenimiento -->
+                            <div class="mt-4">
+                              <button onclick="toggleMaintenance(this)" class="flex items-center justify-between w-full text-left text-[<%= pkg.color %>] font-bold">
+                                <span><%= pkg.mantenimiento.title %></span>
+                                <i class="fas fa-caret-down ml-2"></i>
+                              </button>
+                              <ul class="mt-2 hidden list-none">
+                                <% pkg.mantenimiento.features.map(ft => { %>
+                                  <li class="flex content-start items-center text-white mt-3 text-start">
+                                    <i class="fa-solid fa-screwdriver-wrench content-center mr-2 text-[<%= pkg.color %>]"></i>
+                                    <%= ft %>
+                                  </li>
+                                <% }) %>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                      <% }) %>                      
+                </div>
+            </div>
+        </section>
+        
 
         <section id="contacto" class="w-full py-12 md:py-24 lg:py-32 bg-gray-800">
             <div class="container px-4 md:px-6 mx-auto">
                 <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl text-center mb-8 text-white">Contáctame</h2>
                 <div class="mx-auto max-w-lg flex flex-col justify-items-center">
                     <p class="text-center text-gray-400 mb-8">
-                        🚀 ¿Listo para llevar tu presencia online al siguiente nivel? Contáctame para discutir tu proyecto y hacer algo increible juntos. 🤩
+                        🚀 ¿Listo para llevar tu presencia online al siguiente nivel? Contáctame para hacer algo increible juntos o para resolver dudas. 💡
                     </p>
-                    <a target="_blank" href="https://api.whatsapp.com/send?phone=56965926195&text=Hola%2C%20vengo%20de%20tu%20pagina%20web." class="inline-flex items-center justify-center text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none border-white border text-white hover:bg-gray-700 rounded-full w-auto h-11 px-8">
+                    <a target="_blank" href="https://wa.me/56965926195" class="inline-flex items-center justify-center text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none border-white border text-white hover:bg-gray-700 rounded-full w-auto h-11 px-8">
                         Enviar Mensaje
                     </a>
                 </div>
@@ -78,16 +173,6 @@
         </section>
     </main>
     <%- include("partials/footer") %>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            setTimeout(() => {
-                const welcomeBackground = document.querySelector('.welcome-background');
-                const welcomeContent = document.querySelector('.welcome-content');
-                
-                welcomeBackground.style.filter = 'blur(5px)';
-                welcomeContent.style.opacity = '1';
-            }, 1000); // Espera 2 segundos antes de aplicar el efecto
-        });
-    </script>
+    <script src="/js/scripts.js"></script>
 </body>
 </html>
