--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -17,47 +17,198 @@
 />
 
 <!-- Google Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+  rel="stylesheet"
+/>
 
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<meta property="og:site_name" content="Joaquin Cancino">
-<meta name="description" content="Ayudo a emprendedores y empresas de Puerto Varas y Ensenada a mejorar su presencia online con sitios web modernos y funcionales, diseñados a medida para sus necesidades." />
+<meta property="og:site_name" content="Joaquin Cancino" />
+<meta
+  name="description"
+  content="Ayudo a emprendedores y empresas de Puerto Varas y Ensenada a mejorar su presencia online con sitios web modernos y funcionales, diseñados a medida para sus necesidades."
+/>
 <meta
   property="og:description"
   content="Ayudo a emprendedores y empresas de Puerto Varas y Ensenada a mejorar su presencia online con sitios web modernos y funcionales, diseñados a medida para sus necesidades."
 />
-<meta name="keywords" content="joaquin cancino, desarrollador web, web developer, puerto varas, ensenada, programador puerto varas, programador ensenada, programador chile, diseñador web,">
-<meta property="og:image" content="/img/logo.png" />
+<meta
+  name="keywords"
+  content="joaquin cancino, desarrollador web, web developer, puerto varas, ensenada, programador puerto varas, programador ensenada, programador chile, diseñador web,"
+/>
+<meta property="og:image" content="/img/logo-black.png" />
 
 <meta property="og:url" content="https://joaquincancino.dev" />
 <meta property="og:type" content="website" />
 
 <!-- Favicons -->
-<link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/img/favicon/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/img/favicon/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/img/favicon/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/img/favicon/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/img/favicon/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileImage" content="/img/favicon/ms-icon-144x144.png">
-<meta name="msapplication-TileColor" content="#111827">
+<link
+  rel="apple-touch-icon"
+  sizes="57x57"
+  href="/img/favicon/apple-icon-57x57.png"
+/>
+<link
+  rel="apple-touch-icon"
+  sizes="60x60"
+  href="/img/favicon/apple-icon-60x60.png"
+/>
+<link
+  rel="apple-touch-icon"
+  sizes="72x72"
+  href="/img/favicon/apple-icon-72x72.png"
+/>
+<link
+  rel="apple-touch-icon"
+  sizes="76x76"
+  href="/img/favicon/apple-icon-76x76.png"
+/>
+<link
+  rel="apple-touch-icon"
+  sizes="114x114"
+  href="/img/favicon/apple-icon-114x114.png"
+/>
+<link
+  rel="apple-touch-icon"
+  sizes="120x120"
+  href="/img/favicon/apple-icon-120x120.png"
+/>
+<link
+  rel="apple-touch-icon"
+  sizes="144x144"
+  href="/img/favicon/apple-icon-144x144.png"
+/>
+<link
+  rel="apple-touch-icon"
+  sizes="152x152"
+  href="/img/favicon/apple-icon-152x152.png"
+/>
+<link
+  rel="apple-touch-icon"
+  sizes="180x180"
+  href="/img/favicon/apple-icon-180x180.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="192x192"
+  href="/img/favicon/android-icon-192x192.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="32x32"
+  href="/img/favicon/favicon-32x32.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="96x96"
+  href="/img/favicon/favicon-96x96.png"
+/>
+<link
+  rel="icon"
+  type="image/png"
+  sizes="16x16"
+  href="/img/favicon/favicon-16x16.png"
+/>
+<link rel="manifest" href="/manifest.json" />
+<meta
+  name="msapplication-TileImage"
+  content="/img/favicon/ms-icon-144x144.png"
+/>
+<meta name="msapplication-TileColor" content="#111827" />
 <meta name="theme-color" content="#111827" />
 
 <!-- Custom JS -->
-<script src="/js/navbar.js"></script>
-
+<!-- <script src="/js/navbar.js"></script>
+ -->
 <!-- Custom CSS -->
 <link rel="stylesheet" href="/css/main.css" />
+
+<!-- JSON-LD -->
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Person",
+        "name": "Joaquín Cancino",
+        "jobTitle": "Diseñador Web",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Puerto Varas, Chile"
+        }
+      },
+      {
+        "@type": "Product",
+        "name": "Planes de Diseño Web",
+        "description": "Planes personalizados de diseño web para negocios locales y empresas.",
+        "offers": [
+          {
+            "@type": "Offer",
+            "name": "Plan Económico",
+            "description": "Ideal para pequeños negocios locales que solo necesitan una presencia online rápida y accesible con un diseño profesional y moderno.",
+            "priceCurrency": "CLP",
+            "price": "100000",
+            "url": "https://joaquincancino.dev/#plan-economico",
+            "seller": {
+              "@type": "Person",
+              "name": "Joaquín Cancino"
+            },
+            "availability": "InStock",
+            "discount": {
+              "@type": "Offer",
+              "price": "150000",
+              "eligibleQuantity": "1",
+              "description": "Descuento limitado"
+            }
+          },
+          {
+            "@type": "Offer",
+            "name": "Plan Avanzado",
+            "description": "Ideal para negocios como restaurantes o cabañas que necesitan mostrar más detalles de sus servicios y atraer a más clientes online.",
+            "priceCurrency": "CLP",
+            "price": "200000",
+            "url": "https://joaquincancino.dev/#plan-avanzado",
+            "seller": {
+              "@type": "Person",
+              "name": "Joaquín Cancino"
+            },
+            "availability": "InStock"
+          },
+          {
+            "@type": "Offer",
+            "name": "Plan Full",
+            "description": "Ideal para empresas que buscan una solución completa y optimizada, con características avanzadas y mayor interacción con los clientes.",
+            "priceCurrency": "CLP",
+            "price": "350000",
+            "url": "https://joaquincancino.dev/#plan-full",
+            "seller": {
+              "@type": "Person",
+              "name": "Joaquín Cancino"
+            },
+            "availability": "InStock"
+          }
+        ]
+      }
+    ]
+  }
+</script>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Joaquín Cancino",
+    "url": "https://joaquincancino.dev",
+    "logo": "https://joaquincancino.dev/img/logo-black.png",
+    "sameAs": [
+      "https://www.linkedin.com/in/joaquincdev/",
+      "https://www.instagram.com/joaquincancino.dev/"
+    ]
+  }
+</script>
