--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,10 +1,9 @@
-<header id="navbar" class="text-white p-4 h-13 fixed z-50 top-0 w-full transition-colors duration-500 flex bg-gray-900 bg-opacity-10">
+<header id="navbar" class="text-white p-4 h-13 z-50 top-0 w-full transition-colors duration-500 flex bg-gray-900">
     <nav class="container mx-auto flex justify-between items-center pl-4 pr-4">
         <span class="text-2xl font-bold"><a href="/">JC</a></span>
         <ul class="flex space-x-4">
-            <li><a href="#inicio" class="hover:text-gray-300">Inicio</a></li>
-            <li><a href="#sobre-mi" class="hover:text-gray-300">Sobre mí</a></li>
-            <li><a href="#portafolio" class="hover:text-gray-300">Portafolio</a></li>
+            <li><a href="#portafolio" class="hover:text-gray-300">Proyectos</a></li>
+            <li><a href="#planes" class="font-bold animate__animated animate__pulse hover:text-gray-300">Planes</a></li>
             <li><a href="#contacto" class="hover:text-gray-300">Contacto</a></li>
         </ul>
     </nav>
