--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -39,9 +39,9 @@
 />
 <meta
   name="keywords"
-  content="joaquin cancino, desarrollador web, web developer, puerto varas, ensenada, programador puerto varas, programador ensenada, programador chile, diseñador web,"
+  content="joaquin cancino, desarrollador web, web developer, puerto varas, ensenada, programador puerto varas, programador ensenada, programador chile, diseñador web, paginas web, crear pagina web, diseño de paginas web, paginas web baratas"
 />
-<meta property="og:image" content="/img/logo-black.png" />
+<meta property="og:image" content="/img/brand-img.jpg" />
 
 <meta property="og:url" content="https://joaquincancino.dev" />
 <meta property="og:type" content="website" />
