--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,6 +1,8 @@
 <header id="navbar" class="text-white p-4 h-13 z-50 top-0 w-full transition-colors duration-500 flex bg-gray-900">
     <nav class="container mx-auto flex justify-between items-center pl-4 pr-4">
-        <span class="text-2xl font-bold"><a href="/">JC</a></span>
+        <a href="/">
+            <img class="h-8 w-auto" src="/img/logo.png" alt="Logo de Joaquín Cancino">
+        </a>
         <ul class="flex space-x-4">
             <li><a href="#portafolio" class="hover:text-gray-300">Proyectos</a></li>
             <li><a href="#planes" class="font-bold animate__animated animate__pulse hover:text-gray-300">Planes</a></li>
