--- a/src/views/ejemplos/landing.ejs
+++ b/src/views/ejemplos/landing.ejs
@@ -153,12 +153,21 @@
         <section id="contacto" class="py-28 bg-white">
             <div class="container mx-auto px-12">
                 <h2 class="text-4xl font-serif font-bold text-center mb-12">Contacto</h2>
-                <div class="grid md:grid-cols-2 gap-12">
+                <div class="grid md:px-16 md:grid-cols-2 gap-12 items-center">
                     <div>
                         <h3 class="text-2xl font-bold mb-4">Información de contacto</h3>
-                        <p class="mb-2"><strong>Dirección:</strong> Camino Ensenada, Km. 23......</p>
-                        <p class="mb-2"><strong>Teléfono:</strong> +56 9 1234 5678</p>
-                        <p class="mb-4"><strong>Email:</strong> info@cabanasnaturales.com</p>
+                        <p class="mb-2">
+                            <i class="fas fa-map-marker-alt mr-2"></i> <strong>Dirección:</strong> Camino Ensenada, Km. 23...
+                        </p>
+                        <p class="mb-2">
+                            <i class="fas fa-phone mr-2"></i> <strong>Teléfono:</strong> +56 9 1234 5678
+                        </p>
+                        <p class="mb-4">
+                            <i class="fas fa-envelope mr-2"></i> <strong>Email:</strong> info@cabanasnaturales.com
+                        </p>
+                        <p class="mb-4">
+                            <i class="fas fa-clock mr-2"></i> <strong>Horario:</strong> Lunes - Domingo: 10:00 AM - 10:00 PM
+                        </p>
                     </div>
                     <div>
                         <iframe 
@@ -181,7 +190,6 @@
                 <p class="text-xl mb-8 text-white">Haz clic en el botón y chatea con nosotros en WhatsApp. Es rápido, fácil y te responderemos al instante.</p>
                 <a 
                     href="#" 
-                    target="_blank" 
                     rel="noopener noreferrer" 
                     class="inline-block bg-white text-green-600 font-bold py-3 px-8 rounded-full text-xl hover:bg-green-100 transition duration-300 shadow-lg"
                 >
