--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,12 +1,25 @@
-<header id="navbar" class="text-white p-4 h-13 z-50 top-0 w-full transition-colors duration-500 flex bg-gray-900">
+<header id="navbar" class="text-white p-4 h-13 z-50 top-0 w-full flex bg-gray-900">
     <nav class="container mx-auto flex justify-between items-center pl-4 pr-4">
         <a href="/">
             <img class="h-8 w-auto" src="/img/logo.png" alt="Logo de Joaquín Cancino">
         </a>
-        <ul class="flex space-x-4">
+
+        <button id="menu-btn" class="block lg:hidden text-white focus:outline-none">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+            </svg>
+        </button>
+
+        <ul class="hidden lg:flex space-x-4">
             <li><a href="#portafolio" class="hover:text-gray-300">Proyectos</a></li>
             <li><a href="#planes" class="font-bold animate__animated animate__pulse hover:text-gray-300">Planes</a></li>
             <li><a href="#contacto" class="hover:text-gray-300">Contacto</a></li>
         </ul>
+
+        <ul id="mobile-menu" class="hidden flex-col space-y-4 lg:hidden absolute top-16 left-0 bg-gray-900 w-full text-center p-4 animate__delay-05s animate__animated animate__slideInDown z-40">
+            <li><a href="#portafolio" class="hover:text-gray-300">Proyectos</a></li>
+            <li><a href="#planes" class="font-bold animate__animated animate__pulse hover:text-gray-300">Planes</a></li>
+            <li><a href="#contacto" class="hover:text-gray-300">Contacto</a></li>
+        </ul>        
     </nav>
 </header>
